# Camera-Muxer

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
codec/: CMakeLists.txt  build.gradle  gradle.properties
codec/src/libyuv/include/libyuv/: compare.h  compare_row.h  convert.h  convert_argb.h  convert_from.h  convert_from_argb.h  cpu_id.h  mjpeg_decoder.h  planar_functions.h  rotate.h  rotate_argb.h  rotate_row.h  row.h  scale.h  scale_argb.h  scale_row.h  video_common.h
codec/src/libyuv/source/: compare.cc  compare_common.cc  compare_gcc.cc  compare_msa.cc  compare_neon.cc  compare_neon64.cc  compare_win.cc  convert.cc  convert_argb.cc  convert_from.cc  convert_from_argb.cc  convert_jpeg.cc  convert_to_argb.cc  convert_to_i420.cc  cpu_id.cc  mjpeg_decoder.cc  mjpeg_validate.cc  planar_functions.cc  rotate.cc  rotate_any.cc  rotate_argb.cc  rotate_common.cc  rotate_gcc.cc  rotate_msa.cc  rotate_neon.cc  rotate_neon64.cc  rotate_win.cc  row_any.cc  row_common.cc  row_gcc.cc  row_msa.cc  row_neon.cc  row_neon64.cc  row_win.cc  scale.cc  scale_any.cc  scale_argb.cc  scale_common.cc  scale_gcc.cc  scale_msa.cc  (+4 more)
codec/src/libyuv/unit_test/: basictypes_test.cc  color_test.cc  compare_test.cc  convert_test.cc  cpu_test.cc  cpu_thread_test.cc  math_test.cc  planar_test.cc  rotate_argb_test.cc  rotate_test.cc  scale_argb_test.cc  scale_test.cc  unit_test.cc  unit_test.h  video_common_test.cc
codec/src/libyuv/util/: compare.cc  psnr.cc  psnr.h  psnr_main.cc
codec/src/main/: AndroidManifest.xml
codec/src/main/cpp/: yuvutils.cpp
(+57 files in other folders)
